--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ header {
     display: inline-block;
     margin-left: 100px;
     margin-top: 15px;
-    width: 100vh;
+    width: 900px;
     height: 50px;
 }
 
@@ -32,7 +32,7 @@ header {
 .nav-top {
     display: inline-block;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 12px;
     margin-top: 12px;
     float: right;
 }
@@ -46,33 +46,50 @@ header {
     line-height: 20px;
     color: white;
     text-decoration: none;
-    margin-right: 18px;
+    margin-right: 45px;
     }
-.top-menu > a:first-of-type {
+
+.top-menu > a:hover {
     color:rgb(190, 22, 22);
 }
 
 .top-icons {
     float: left;
+    margin-left: 25px;
 }
-.top-icons > i {
+.top-icons > a {
     display: inline-block;
+    line-height: 20px;
     color: white;
-    background-color: rgb(255, 174, 0);
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+.top-cons > a:hover {
+    border-width: 0;
+    border-radius: 5px;
+    background-color:rgb(190, 22, 22);
+    color: black;
+    
 }
 
 .prekes-container {
     background-image: url(../img/batai1.png);
     background-position:right center;
     background-repeat: no-repeat;
-    width: 100vh;
+    width: 1030px;
     height: 600px;
-    padding: 100px;
-    float: left;
+    position: relative;
 }
 
 .tekstas {
+    width: 500px;
     float: left;
+    color: grey;
+    font-size: 25px;
+    position:absolute;
+    top:100px;
+    left:100px;
 }
 
 .prekes-pavadinimas {
@@ -82,8 +99,11 @@ header {
 }
 
 .prekes-aprasymas {
-    color: grey
-    
+    margin-top: 15px;
+}
+
+.prekes-kaina {
+    margin-top: 25px;
 }
 
 /*
