--- a/css/main.css
+++ b/css/main.css
@@ -17,9 +17,9 @@ body {
 
 header {
     display: inline-block;
-    margin-left: 100px;
+    margin-left: calc(50% - 470px);
     margin-top: 15px;
-    width: 900px;
+    width: 1000px;
     height: 50px;
 }
 
@@ -79,6 +79,7 @@ header {
     background-repeat: no-repeat;
     width: 1030px;
     height: 600px;
+    margin-left: calc(50% - 470px);
     position: absolute;
 }
 
@@ -89,7 +90,7 @@ header {
     font-size: 25px;
     position:absolute;
     top:100px;
-    left:100px;
+    left:0px;
 }
 
 .prekes-pavadinimas {
@@ -132,6 +133,11 @@ button {
     padding: 2px;
 }
 
+button:hover {
+    background-color: grey;
+    cursor:pointer;
+}
+
 .prekes-nr {
     position: absolute;
     top :40px;
@@ -161,30 +167,78 @@ button {
     text-align: center;
     font-size:15px;
 }
-/*
 
-header > nav {
-    display: inline-block;
-    float: right;
-    margin-top: 12px;
+.slaideris {
+    width: 190px;
+    height: 25px;
+    position: absolute;
+    bottom:0px;
+    left: 0px;
 }
 
- nav > a {
-    display: inline-block;
+.puslapiai {
+    font-size: 13px;
+    color:rgb(190, 22, 22);
+    font-family: Arial, Helvetica, sans-serif;
+}
+.psl-pirmas{
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
+.psl-paskutinis{
+    position: absolute;
+    right: 0px;
+    top: 0px;
+}
+
+.juosta {
     float: left;
-    line-height: 20px;
-    
-    color: #9F9F9F;
-    text-decoration: none;
-    
-    padding: 0px;
-    margin-right: 8px;
-    border-radius: 19px;
+    width: 100%;
+    height: 4px;
+    background-color: lightgrey;
+    position: absolute;
+    bottom: 0px;;
 }
 
-nav > a:last-of-type {
-    padding-left: 12px;
-    padding-right: 12px;
-    margin-left: 0px;
-    border-color:  #9F9F9F; */
-    
+.juostos-elementas-1 {
+    display:inline-block;
+    Height:4px;
+    width: calc(100%/3);
+}
+.juostos-elementas-1:hover {
+    background-color:rgb(190, 22, 22);
+}
+.juostos-elementas-2 {
+    float: left;
+    Height:4px;
+    width: calc(100%/3);
+}
+.juostos-elementas-2:hover {
+    background-color:rgb(190, 22, 22);
+}
+
+.juostos-elementas-3 {
+    float: left;
+    Height:4px;
+    width: calc(100%/3);
+}
+.juostos-elementas-3:hover {
+    background-color:rgb(190, 22, 22);
+}
+
+/*
+.juostos-elementas {
+    display:inline-block;
+    Height:4px;
+    width: calc(100%/3);
+    float: left;
+}
+.juostos-elementas-active {
+    display:inline-block;
+    Height:4px;
+    width: calc(100%/3);
+    float: left;
+    background-color:rgb(190, 22, 22);
+}
+*/
