Pataisyta nuorodu juosta

--- a/css/main.css
+++ b/css/main.css
@@ -234,4 +234,9 @@ button:hover {
     float: left;
     background-color:rgb(190, 22, 22);
 }
+.p-link{
+    display: block;
+    width: 100%;
+    height: 4px;
+}
 
