Soc tinklu hoveris

--- a/css/main.css
+++ b/css/main.css
@@ -157,6 +157,10 @@ button:hover {
     text-align: center;
     font-size:15px;
 }
+.soc-tinklai > a:hover{
+    background-color: black;
+    color: white;
+}
 
 .slaideris {
     width: 190px;
